React 마이그레이션: CORS에 주소 추가 및  설정 제한